--- a/.env
+++ b/.env
@@ -33,3 +33,6 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+BAIDU_TRANSLATE_APPID=20180723000188361
+BAIDU_TRANSLATE_KEY=vgcuKWnX3KQbqrWq2B51
