--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,10 @@ PUSHER_APP_CLUSTER=mt1
 
 BAIDU_TRANSLATE_APPID=20180723000188361
 BAIDU_TRANSLATE_KEY=vgcuKWnX3KQbqrWq2B51
+
+# dingo config
+API_STANDARDS_TREE=
+API_SUBTYPE=
+API_PREFIX=
+API_VERSION=
+API_DEBUG=
