--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-ide-helper": "^2.4",
         "dingo/api": "2.0.0-alpha2",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/guzzle": "~6.3",
@@ -17,7 +18,8 @@
         "mews/purifier": "~2.0",
         "overtrue/laravel-lang": "~3.0",
         "overtrue/pinyin": "~3.0",
-        "predis/predis": "~1.0"
+        "predis/predis": "~1.0",
+        "spatie/laravel-permission": "~2.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.1",
@@ -57,7 +59,10 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+            "@php artisan package:discover",
+            "php artisan ide-helper:generate",
+            "php artisan ide-helper:meta",
+            "php artisan optimize"
         ]
     },
     "config": {
