--- a/.env.example
+++ b/.env.example
@@ -45,4 +45,8 @@ API_VERSION=
 API_DEBUG=
 
 # 云片
-YUNPIAN_API_KEY=9c60bdd**********
+YUNPIAN_API_KEY=8488d0f11e5d51114dc3056106e3049e
+
+# socialite weixin
+WEIXIN_KEY=wx05d875271e96a4f6
+WEIXIN_SECRET=47d4fc187b262d70743f3eb0ab77ac99
