--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ YUNPIAN_API_KEY=8488d0f11e5d51114dc3056106e3049e
 # socialite weixin
 WEIXIN_KEY=wx05d875271e96a4f6
 WEIXIN_SECRET=47d4fc187b262d70743f3eb0ab77ac99
+
+# jpush
+JPUSH_KEY=9c6f53edad67db7ec24bfe32
+JPUSH_SECRET=deeb2a04669ab79******
