--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "intervention/image": "^2.4",
         "jpush/jpush": "^3.6",
         "laravel/framework": "5.5.*",
+        "laravel/passport": "~4.0",
         "laravel/tinker": "~1.0",
         "liyu/dingo-serializer-switch": "^0.3.0",
         "mews/captcha": "~2.0",
