--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,8 @@ WEIXIN_SECRET=47d4fc187b262d70743f3eb0ab77ac99
 # jpush
 JPUSH_KEY=9c6f53edad67db7ec24bfe32
 JPUSH_SECRET=deeb2a04669ab79******
+
+WECHAT_MINI_PROGRAM_APPID=
+WECHAT_MINI_PROGRAM_SECRET=
+WECHAT_MINI_PROGRAM_TOKEN=
+WECHAT_MINI_PROGRAM_AES_KEY=
