--- a/.env.example
+++ b/.env.example
@@ -38,11 +38,11 @@ BAIDU_TRANSLATE_APPID=20180723000188361
 BAIDU_TRANSLATE_KEY=vgcuKWnX3KQbqrWq2B51
 
 # dingo config
-API_STANDARDS_TREE=
-API_SUBTYPE=
-API_PREFIX=
-API_VERSION=
-API_DEBUG=
+API_STANDARDS_TREE=prs
+API_SUBTYPE=larabbs
+API_PREFIX=api
+API_VERSION=v1
+API_DEBUG=true
 
 # 云片
 YUNPIAN_API_KEY=8488d0f11e5d51114dc3056106e3049e
